--- a/leehyunsoo/exam_5_397.ipynb
+++ b/leehyunsoo/exam_5_397.ipynb
@@ -2,60 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 6]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def carry_opperation(num01, num02):\n",
-    "    ar = [[int(ind) for ind in str(num01)],[int(ind) for ind in str(num02)]]\n",
-    "    sum_ar = [sum(i) for i in ar]\n",
-    "    return 0\n",
+    "    ar = [[int(ind) for ind in str(num01)], [int(ind) for ind in str(num02)]]\n",
+    "    sum_ar = []\n",
+    "    count = 0\n",
+    "    \n",
+    "    if len(ar[0]) > len(ar[1]):\n",
+    "        for x in range(len(ar[0]) - len(ar[1])):\n",
+    "            ar[1].insert(0,0)\n",
+    "    elif len(ar[0]) < len(ar[1]):\n",
+    "        for x in range(len(ar[1]) - len(ar[0])):\n",
+    "            ar[0].insert(0,0)\n",
+    "        \n",
+    "    for x in range(len(ar[0])):\n",
+    "        sum_ar.append(ar[0][x] + ar[1][x])\n",
+    "        \n",
+    "    for x in range(len(sum_ar)-1,0,-1):\n",
+    "        if  sum_ar[x] >= 10:\n",
+    "            sum_ar[x-1] += 1\n",
+    "    for x in range(len(sum_ar)):\n",
+    "        if  sum_ar[x] >= 10:\n",
+    "            count += 1\n",
+    "    return count\n",
     "\n",
-    "carry_opperation(111, 222)"
+    "carry_opperation(5, 555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert carry_opperation(111, 222) == 0\n",
+    "assert carry_opperation(5, 455) == 1\n",
+    "assert carry_opperation(6, 555) == 1\n",
+    "assert carry_opperation(123, 594) == 1\n",
+    "assert carry_opperation(445, 555) == 3\n",
+    "assert carry_opperation(555, 555) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "empty separator",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-b34e4fbdb339>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m111\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m222\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m555\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m555\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m123\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m594\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m555\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m555\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-92d050a62719>\u001b[0m in \u001b[0;36mcarry_opperation\u001b[0;34m(num01, num02)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcarry_opperation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum02\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mnum_ar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_ar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: empty separator"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "assert carry_opperation(111, 222) == 0\n",
-    "assert carry_opperation(5, 555) == 1\n",
-    "assert carry_opperation(6, 555) == 1\n",
-    "assert carry_opperation(123, 594) == 1\n",
-    "assert carry_opperation(555, 555) == 3"
+    "def func_5_397(num01, num02):\n",
+    "    ar = [[int(ind) for ind in str(num01)], [int(ind) for ind in str(num02)]]\n",
+    "    count = 0\n",
+    "    if len(ar[0]) > len(ar[1]):\n",
+    "        ar[1] = [0 for x in range(len(str(num01)) - len(str(num02)))] + [num02]\n",
+    "    elif len(ar[0]) < len(ar[1]):\n",
+    "        ar[0] = [0 for x in range(len(str(num02)) - len(str(num01)))] + [num01]\n",
+    "        \n",
+    "    sum_ar = [ (ar[0][x] + ar[1][x]) for x in range(len(ar[0]))]\n",
+    "    \n",
+    "    for x in range(len(sum_ar) - 1,0,-1):\n",
+    "        if  sum_ar[x] >= 10:\n",
+    "            sum_ar[x - 1] += 1\n",
+    "    for x in range(len(sum_ar)):\n",
+    "        if  sum_ar[x] >= 10:\n",
+    "            count += 1\n",
+    "        \n",
+    "    return count\n",
+    "\n",
+    "func_5_397(555, 555)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert carry_opperation(111, 222) == func_5_397(111, 222)\n",
+    "assert carry_opperation(5, 555) == func_5_397(5, 555)\n",
+    "assert carry_opperation(6, 555) == func_5_397(6, 555)\n",
+    "assert carry_opperation(123, 594) == func_5_397(123, 594)\n",
+    "assert carry_opperation(445, 555) == func_5_397(445, 555)\n",
+    "assert carry_opperation(555, 5) == func_5_397(555, 5)"
    ]
   },
   {
