--- a/leehyunsoo/exam_5_397.ipynb
+++ b/leehyunsoo/exam_5_397.ipynb
@@ -112,6 +112,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_gulby_397(n1, n2):\n",
+    "    n_max_len = max(len(str(n1)), len(str(n2)))\n",
+    "    an1 = [int(x) for x in str(n1).rjust(n_max_len, '0')]\n",
+    "    an2 = [int(x) for x in str(n2).rjust(n_max_len, '0')]\n",
+    "    sum_n = [a + b for a, b in zip(an1, an2)]\n",
+    "    sum_n.reverse()\n",
+    "    #for i in range(1, n_max_len):\n",
+    "    #    sum_n[i] = sum_n[i] + sum_n[i-1] // 10\n",
+    "    result = len([x for x in sum_n if x > 9])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_gulby_397(111, 222) == 0\n",
+    "assert func_gulby_397(5, 455) == 1\n",
+    "assert func_gulby_397(6, 555) == 1\n",
+    "assert func_gulby_397(123, 594) == 1\n",
+    "assert func_gulby_397(445, 555) == 3\n",
+    "assert func_gulby_397(555, 555) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
