--- a/yoon/27_404.ipynb
+++ b/yoon/27_404.ipynb
@@ -2,44 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "\n",
+    "import re\n",
+    "import os\n",
     "def func_404 ():\n",
-    "    path = '/home/yoonjae/gitfo/study/yoon/27_404_folder'\n",
-    "    files = os.listdir(path)\n",
-    "    for i in range(len(files)):\n",
-    "#         print(files)\n",
-    "        input_file = open('')\n",
-    "        \n",
-    "    files_txt = [i for i in files if i.endswith('.txt')]\n",
-    "    return files_txt"
+    "    directory = os.listdir('/home/yoonjae/gitfo/study/yoon/27_404_folder')\n",
+    "    result = 0\n",
+    "    for file in directory:\n",
+    "        open_file = open('/home/yoonjae/gitfo/study/yoon/27_404_folder/'+file,'r').readlines()\n",
+    "        print(open_file)\n",
+    "        if open_file == ['LIFE IS TOO SHORT\\n']:\n",
+    "            result +=1\n",
+    "    return result\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-52daaa0724b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfunc_404\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-43-63ee5afef03e>\u001b[0m in \u001b[0;36mfunc_404\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#         print(files)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0minput_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mfiles_txt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfiles\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['LIFE IS TOO SHORT\\n']\n",
+      "['LIFE IS TOO SHORT\\n']\n",
+      "['temp\\n']\n",
+      "['temp\\n']\n",
+      "['LIFE IS TOO SHORT\\n']\n"
      ]
     }
    ],
    "source": [
-    "func_404()"
+    "assert func_404() == 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
