3월 22일 피드백

--- a/yoon/29_418.ipynb
+++ b/yoon/29_418.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "\n",
     "def func_418 (now_time):\n",
     "    result = 0\n",
-    "    open_file = open('/home/yoonjae/gitfo/study/yoon/29_418_folder/log','r').readlines()\n",
+    "    open_file = open('/home/gulby/git/study/yoon/29_418_folder/log','r').readlines()\n",
     "    for i in range(len(open_file)):\n",
     "        time_array = open_file[i].split(' ')\n",
     "        result = result +1 if time_array[0] < now_time < time_array[1] else result\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,85 @@
     "assert func_418('20:05:20') == 2\n",
     "assert func_418('23:55:20') == 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func_418 (now_time):\n",
+    "    open_file = open('/home/gulby/git/study/yoon/29_418_folder/log','r').readlines()\n",
+    "    return sum([1 if a < now_time < b else 0 for a, b in (x.strip().split(' ') for x in open_file)])\n",
+    "func_418('11:05:20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_418('11:05:20') == 8\n",
+    "assert func_418('11:20:20') == 6\n",
+    "assert func_418('20:05:20') == 2\n",
+    "assert func_418('23:55:20') == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func_418 (now_time):\n",
+    "    open_file = open('/home/gulby/git/study/yoon/29_418_folder/log','r').readlines()\n",
+    "    time_tuples = (x.strip().split(' ') for x in open_file)\n",
+    "    checked = (1 if a < now_time < b else 0 for a, b in time_tuples)\n",
+    "    return sum(checked)\n",
+    "func_418('11:05:20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_418('11:05:20') == 8\n",
+    "assert func_418('11:20:20') == 6\n",
+    "assert func_418('20:05:20') == 2\n",
+    "assert func_418('23:55:20') == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
