--- a/yoon/30_421.ipynb
+++ b/yoon/30_421.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "[1, '*', 2, 1, 2, 2, 2, '*', '*', 1, 1, 1, 2, 2, 1, 0]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,6 +77,39 @@
     " func_421(4,4,['.*..','...*','*...','....'])\n",
     "# assert func_421(4,4,['.*..','...*','....','....']) == [*10022101*101110]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_421_2(N, M, matrix):\n",
+    "    m = []\n",
+    "    m.append([0]*(M+2))\n",
+    "    for i in range(N):\n",
+    "        m.append([0] + [1 if x == '*' else 0 for x in matrix[M*i:M*(i+1)]] + [0])\n",
+    "    m.append([0]*(M+2))\n",
+    "    result = [str(sum(m[i-1][j-1:j+2]) + sum(m[i][j-1:j+2]) + sum(m[i+1][j-1:j+2]) - m[i][j]) if m[i][j] == 0 else '*'  for i in range(1, N+1) for j in range(1, M+1)]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_421_2(4, 4, list('*........*......')) == list('*10022101*101110')\n",
+    "assert func_421_2(3, 5, list('**.........*...')) == list('**100332001*100')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
