--- a/yoon/31_424.ipynb
+++ b/yoon/31_424.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,47 @@
     "assert func_424([6,11,7,4,2,1,6]) == 1\n",
     "assert func_424([5,1,4,3,-1,6]) == 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_jolly_jumper(sequence):\n",
+    "    N = len(sequence)\n",
+    "    gram_2 = [(a, b) for (a, b) in zip(sequence, sequence[1:])]\n",
+    "    diff = [abs(a - b) for (a, b) in gram_2]\n",
+    "    return set(diff) == {x for x in range(1, N)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{0, 1, 2, 3}\n",
+      "{2, 3, 7}\n",
+      "{0, 1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert check_jolly_jumper([int(x) for x in '1 4 2 3'.split(' ')]) == True\n",
+    "assert check_jolly_jumper([int(x) for x in '1 4 2 -1 6'.split(' ')]) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
