--- a/yoon/33_429.ipynb
+++ b/yoon/33_429.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,36 @@
     "assert func_429(6241) == 1\n",
     "assert func_429(8191) == 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def func_429(num):\n",
+    "    r = math.sqrt(num)\n",
+    "    return r == int(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_429(3) == 0\n",
+    "assert func_429(6241) == 1\n",
+    "assert func_429(8191) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
