--- a/yoon/32_428.ipynb
+++ b/yoon/32_428.ipynb
@@ -2,22 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func_428(str_num):\n",
     "    result = []\n",
     "    for i in range(len(str_num)):\n",
-    "        result += '*' if ord('0') <= ord(str_num[i]) <= ord('9') and i%2 == 1 else  result += str_num[i]\n",
+    "        result += '*' if ord('0') <= ord(str_num[i]) <= ord('9') and i % 2 == 1 else str_num[i]\n",
     "    return ''.join(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', '*', 'b', '*', '1']\n",
+      "['a', '*', 'b', '*', 'c', 'd', 'e', '*', '~', 'g', '4', '*', 'h', 'i', '6']\n"
+     ]
+    }
+   ],
    "source": [
     "assert func_428('a1b21') == 'a*b*1'\n",
     "assert func_428('a1b2cde3~g45hi6') == 'a*b*cde*~g4*hi6'"
