3월 23일 피드백

--- a/yoon/34_431.ipynb
+++ b/yoon/34_431.ipynb
@@ -34,6 +34,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 별로 좋은 예가 아님\n",
+    "def func_431_2(n) :\n",
+    "    drainage_list = (int('1'*x) for x in range(2, 24))\n",
+    "    return len(str(min(filter(lambda x: x % n == 0, drainage_list))))\n",
+    "func_431_2(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_431_2(3) == 3\n",
+    "assert func_431_2(7) == 6\n",
+    "assert func_431_2(11) == 2\n",
+    "assert func_431_2(13) == 6\n",
+    "assert func_431_2(17) == 16\n",
+    "assert func_431_2(19) == 18\n",
+    "assert func_431_2(21) == 6\n",
+    "assert func_431_2(23) == 22\n",
+    "assert func_431_2(9901) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
